@@ -143,7 +143,7 @@ class CatalogTool(UniqueObject, ZCatalog, ActionProviderBase):
         if sm.calledByExecutable():
             eo = sm._context.stack[-1]
             proxy_roles = getattr(eo, '_proxy_roles', None)
-            if proxy_roles is not None:
+            if proxy_roles:
                 effective_roles = proxy_roles
         result = list( effective_roles )
         result.append( 'Anonymous' )
